<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white"

    >
    <EditText
        android:id="@+id/et_input1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/enter_number_1"
        android:inputType="number"
        android:layout_margin="15dp"
        android:background="@drawable/borders"
        android:autofillHints="" />
  <!--  <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/black"/>-->
    <EditText
        android:id="@+id/et_input2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/enter_number_2"
        android:inputType="number"
        android:layout_margin="15dp"
        android:background="@drawable/borders"
        android:autofillHints="" />

 <TextView
     android:id="@+id/tv_result"
     android:layout_width="350sp"
     android:layout_height="70sp"
     android:layout_margin="20dp"
     android:hint="@string/result"
     android:textStyle="bold"
     android:textSize="15sp"
     android:padding="10dp"
     android:background="@drawable/borders"/>

    <!--<View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/black"
        />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp">

    <Button
        android:id="@+id/btn_add"
        android:layout_weight="1"
        android:text="@string/add"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/btn_sub"
        android:layout_weight="1"
        android:text="@string/sub"
        android:textColor="@color/black"
        android:layout_width="180dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_mul"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/mul"
            android:layout_width="180dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_div"
            android:text="@string/div"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>



    </LinearLayout>



</LinearLayout>